# SPECTRA

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SPECTRA_final.tex  SPECTRA_new_references_bibtex_doi.txt  SPECTRA_novelty_statement.txt  SPECTRA_updated_reference_list_IEEEtran.txt  config.yaml  dataset_description.txt  pyproject.toml  requirements.txt  run_fair_baselines.py  run_spectra.py  spectra_references.bib
configs/: config.yaml  config_fixed_eval.yaml  config_fixed_labels.yaml  config_full_dryrun.yaml  config_full_imbalance.yaml  config_vae_beta05.yaml  config_vae_beta20.yaml  config_vae_ld16.yaml  config_vae_ld64.yaml
data/: DATASET.md
outputs/: SPECTRA_final.tex  SPECTRA_paper_master.tex  paper_section_ablation.tex  paper_section_architecture.tex  paper_section_contributions.tex  paper_section_experiments.tex  paper_section_intro_conclusion.tex  paper_section_label_provenance.tex  paper_section_problem_formulation.tex  paper_section_related_work.tex  paper_section_results.tex  results_table.csv  results_table.tex  results_table_combined.csv  results_table_combined.tex  results_table_fair.csv  results_table_fair.tex  spectra_references.bib
outputs/checkpoints/: README.md
scripts/: _ckpt_utils.py  approx_hdbscan_comparison.py  hub_coverage_breakdown.py  per_class_metrics.py  setup_fixed_eval_checkpoint.py  vae_hdbscan_significance_test.py  wasserstein_threshold_sweep.py
spectra/: __init__.py  baselines.py  classifier.py  cluster.py  features.py  graph.py  pipeline.py  profiler.py  vae.py  visualize.py
tests/: test_imports.py
