[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra"
version = "1.0.0"
description = "Spectral-Probabilistic Ensemble Clustering for Bitcoin Transaction Recognition and Authentication"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Sagar Korde", email = "sagarkorde04@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "duckdb>=0.9.2",
    "torch>=2.0",
    "torch_geometric>=2.3",
    "networkx>=3.1",
    "hdbscan>=0.8.33",
    "umap-learn>=0.5.3",
    "xgboost>=1.7",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "PyYAML>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
tda = ["giotto-tda>=0.6.0"]
dev = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/sagarkorde/SPECTRA"

[tool.setuptools.packages.find]
include = ["spectra*"]
